[package]
name = "libvmpl-rs"
version = "0.1.0"
edition = "2021"

[features]
verbose = []
dune = []
xsave = []
test = []
dump = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0.90"

[dependencies]
cc = "1.0.90"
nix = "0.28.0"
num_cpus = "1.16.0"
paste = "1.0.14"
x86_64 = "0.15.0"
libc = "0.2"
log = "0.4.21"
sev = "3.1.1"
asm = "0.3.0"
